# templates

./: flake.nix
blend/: .gitignore  flake.nix  untitled.blend
blend/assets/: assets.blend
blend/config/Code/User/: settings.json
blend/config/bforartists/4.2/config/: startup.blend  userpref.blend
cpp-hello/: CMakeLists.txt  flake.nix
cpp-mingw/: .clangd  CMakeLists.txt  flake.nix  flake.nix.old  main.cpp
go/: README.txt  flake.nix
julia/: flake.nix  script.ipynb  script.jl
python/: flake.nix  script.ipynb
rust/: default.nix  flake.nix
zig/: build-win-optimized.zig  flake.nix
zig/src/: main.zig
